--- a/src/views/Login/Login.module.css
+++ b/src/views/Login/Login.module.css
@@ -4,7 +4,7 @@
 }
 
 .danger {
-  font-size: 10px;
+  font-size: 12px;
   color: red;
   justify-self: center;
   /* margin-left: 10em; */
@@ -82,17 +82,20 @@
   outline: none;
 }
 
+
 .campo {
   position: relative;
   display: grid;
   align-content: space-around;
-  height: 55px;
+  /* height: 50px;
+  width: 300px; */
 }
 
 label {
   width: 300px;
   text-align: center;
   padding: 5px;
+  font-size: 12px;
 }
 
 input {
@@ -106,6 +109,7 @@ input {
   right: 10px;
   top: 5px;
   cursor: pointer;
+  font-size: 12px;
   /* pwd-icon */
 }
 
