Agregue registro de usuario y trate de corregir algunos estilos

--- a/src/views/About/About.module.css
+++ b/src/views/About/About.module.css
@@ -5,6 +5,7 @@ a:active {
 }
 
 .container {
+  backgroundImage: "https://wallpaperaccess.com/full/831749.png";       
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
